--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,3 @@
-/TestBubble$1.class
-/TestBubble.class
-/TestCoordinate.class
-/TestWorkAreaJPanel.class
-/TestWorkSpace.class
 /co/
-/TestWorkAreaJPanel$1.class
+/TestBSTFile.class
+/TestUserFile.class
